--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Changa+One:ital@0;1&display=swap');
 body {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
     height: 100dvh;
-    background-color: #f0f0f0;
+    background-color: rgb(36, 36, 36);
+    color: white;
     font-family: 'Changa One';
     padding: 30px;
     box-sizing: border-box;
@@ -30,40 +30,56 @@ body {
 	padding: 0;
 	font: inherit;
 	cursor: pointer;
-	outline: inherit;
+	outline: solid 0px white;
+}
+#settingsButton:hover {
+    outline: solid 3px white;
+    transition: outline 0.1s ease-out;
 }
 
 #settingsContent {
     margin-top: 60px;
     padding: 10px;
-    background-color: white;
+    background-color: rgb(63, 63, 63);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    transition: opacity 0.1s ease-out;
+}
+#settingsContent.show {
+    opacity: 1;
+    transition: none;
+}
+.settingGroup{
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
 }
 
 #program {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 90%;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    height: 100%;
+    gap: 20px;
 }
 #post_tags {
     height: 10%;
     overflow-y: auto;
+    display: flex;
+    align-items: end;
 }
 img {
-    height: 100%;
+    height: 90%;
     border-radius: 10px;
 }
 form {
     display: flex;
     flex-direction: column;
-    gap: 5px;
-    width: 40%;
+    gap: 16px;
+    font-size: 1.2em;
 }
 input, button {
     padding: 10px;
